--- a/bobs.html
+++ b/bobs.html
@@ -138,7 +138,15 @@
 	<header>
 		<img src="https://www.mybobs.com/assets/bobs-logo.svg" alt="Bob's Discount Furniture Logo" class="logo">
 	</header>
-
+	<header>
+		<img src="https://www.mybobs.com/assets/bobs-logo.svg" alt="Bob's Discount Furniture Logo" class="logo">
+		<div style="position: absolute; top: 20px; right: 20px; display: flex; align-items: center; gap: 10px;">
+			<a href="tel:+15702217955" style="text-decoration: none; color: #191714; font-family: Arial, sans-serif; font-weight: bold; padding: 10px 15px; border-radius: 5px;">
+				Call Me: (570) 221-7955
+			</a>
+		</div>
+	</header>
+	
 	<div class="navbar">
 		<a href="#overview" onclick="toggleSection('overview')" class="active">Overview</a>
 		<a href="#primary-groups" onclick="toggleSection('primary-groups')">Primary Groups</a>
@@ -156,7 +164,7 @@
 		<section id="overview" class="active">
 			<img src="https://i.ibb.co/KszHcvp/overview.png" alt="overview" border="0" class="full-img">
 			<h1>Overview</h1>
-			<p>The cognitive architecture for Bob's Discount Furniture AI agent is designed to enhance the customer experience by structuring interactions around a well-defined hierarchy. The care group comprises two primary teams—Sales and Service—supported by an AI agent that serves as a concierge and automation assistant. The AI is empowered to address user inquiries, streamline processes, and ensure seamless interactions across various customer journeys. This ontology integrates the primary groups, user stages, topics, guides, tools, and measures to create a unified, efficient, and collaborative care function across digital messaging and voice channels.</p>
+			<p>The cognitive architecture for Bob's Discount Furniture AI agent is designed to enhance the customer experience by structuring interactions around a well-defined hierarchy. The care group comprises two primary teams—Sales and Service—supported by an AI agent that serves as a concierge and automation assistant. The AI is empowered to address user inquiries, streamline processes, and ensure seamless interactions across various customer journeys. This architecture integrates the primary groups, user stages, topics, guides, tools, and measures to create a unified, efficient, and collaborative care function across digital messaging and voice channels.</p>
 		</section>
 
 		<section id="primary-groups">
