--- a/bobs.html
+++ b/bobs.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<script src="https://llmatoz.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
+  <head>
+        <script src="https://bobs-stage.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Bob's Discount Furniture AI Agent</title>
@@ -121,7 +121,7 @@
 		} else {
 			document.body.style.display = 'flex';
 			var chat = Quiq({
-				pageConfigurationId: 'ai-agent-cs'
+				pageConfigurationId: 'cc-main-cs'
 			});
 		}
 
