--- a/bobs-shim.html
+++ b/bobs-shim.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple HTML Page</title>
-    
+    <title>Shim</title>
+    <script src="https://proservices-static-prod.quiq-cdn.com/bobs/chat-bootloader.js?pageconfig=ecomm-prod" id="quiq-shim"></script>
 </head>
 <body>
-    <h1>Welcome to My Simple Page</h1>
-    <p>This is a paragraph of text. It's super simple!</p>
+    <h1>Shim</h1>
 </body>
 </html>
