--- a/bobs-shim.html
+++ b/bobs-shim.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Shim</title>
-    <script src="https://bobs.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
-    <script src="https://proservices-static-prod.quiq-cdn.com/bobs/chat-bootloader.js" id='quiq-shim' data-pageconfig='ecomm-prod'></script>
+<script type="text/javascript" src="https://bobs.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
+
+<script type="text/javascript" src="https://proservices-static-prod.quiq-cdn.com/bobs/chat-bootloader.js?pageconfig=ecomm-prod" id="quiq-shim" defer="" aria-hidden="true"></script>
 </head>
 <body>
     <h1>Shim</h1>
