--- a/bobs-shim.html
+++ b/bobs-shim.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Shim</title>
-<script type="text/javascript" src="https://bobs.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQZBBT2HTP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-LQZBBT2HTP');
+    </script>
 
-<script type="text/javascript" src="https://proservices-static-prod.quiq-cdn.com/bobs/chat-bootloader.js?pageconfig=ecomm-prod" id="quiq-shim" defer="" aria-hidden="true"></script>
+    <script type="text/javascript" src="https://bobs.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="https://proservices-static-prod.quiq-cdn.com/bobs/chat-bootloader.js?pageconfig=ecomm-prod" id="quiq-shim"></script>
 </head>
 <body>
     <h1>Shim</h1>
