--- a/bobs-shim.html
+++ b/bobs-shim.html
@@ -12,7 +12,7 @@
     </script>
 
     <script type="text/javascript" src="https://bobs.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="https://proservices-static-prod.quiq-cdn.com/bobs/chat-bootloader.js?pageconfig=cc-main-cs" id="quiq-shim"></script>
+    <script type="text/javascript" src="https://proservices-static-prod.quiq-cdn.com/bobs/chat-bootloader.js?pageconfig=ecomm-prod" id="quiq-shim"></script>
 </head>
 <body>
     <h1>Shim</h1>
