--- a/bobs-stage-rhs.html
+++ b/bobs-stage-rhs.html
@@ -35,7 +35,7 @@
         console.log('state', data)
         const extState = data.assistState.extensionState
         
-        if (extState.suggestedResponse) {
+        if (extState.summary) {
           const content = document.querySelector("#content")
           content.innerHTML = extState.summary
         }
