--- a/bobs-stage-rhs.html
+++ b/bobs-stage-rhs.html
@@ -18,6 +18,12 @@
     main {
       width: 94%;
     }
+    .summary {
+	padding: 10px;
+    }
+    .data {
+	padding: 3px 10px;
+    }
   </style>
   <body>
     <div id="main-div">
