--- a/bobs-rhs.html
+++ b/bobs-rhs.html
@@ -24,6 +24,17 @@
     .data {
 	padding: 3px 10px;
     }
+    .data label, .data span {
+	width: 100px;
+	display: inline-block;
+        padding: 2px;
+	color: #999;
+	background: #f5f5f5;
+	border: 1px solid #ddd;
+    }
+    .data span {
+	width: 144px;         
+    }
   </style>
   <body>
     <div id="main-div">
