--- a/bobs-rhs.html
+++ b/bobs-rhs.html
@@ -22,7 +22,7 @@
 	padding: 10px;
     }
     .data {
-	padding: 3px 10px;
+	padding: 0px 10px;
     }
     .data label, .data span {
 	width: 100px;
@@ -31,9 +31,10 @@
 	color: #999;
 	background: #f5f5f5;
 	border: 1px solid #ddd;
+	font-size: .85em;
     }
     .data span {
-	width: 144px;         
+	width: 200px;         
     }
   </style>
   <body>
